--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clone",
+  "name": "zpp-clone",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -20,6 +20,10 @@
     "/dist",
     "LICENSE"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-transform-runtime": "^7.1.0",
